--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=WiFiManager
+name=NsfdEspWMS
 version=2.0.11-beta
-author=tzapu
+author=HsmTeknoloji
 maintainer=tablatronix
-sentence=WiFi Configuration manager with web configuration portal for Espressif ESPx boards, by tzapu
+sentence=WiFi Configuration manager with web configuration portal for Espressif ESPx boards, by HsmTeknoloji
 paragraph=Library for configuring ESP8266/ESP32 modules WiFi credentials and custom parameters at runtime with captive portal.
 category=Communication
-url=https://github.com/tzapu/WiFiManager.git
+url=https://github.com/HsmTeknoloji/NsfdEspWMS.git
 architectures=esp8266,esp32
